HydroModels2/src/interpreter/HydroModelsParser.cpp

// Generated from HydroModels.g4 by ANTLR 4.7.2


#include "HydroModelsVisitor.h"

#include "HydroModelsParser.h"


using namespace antlrcpp;
using namespace antlr4;

HydroModelsParser::HydroModelsParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HydroModelsParser::~HydroModelsParser() {
  delete _interpreter;
}

std::string HydroModelsParser::getGrammarFileName() const {
  return "HydroModels.g4";
}

const std::vector<std::string>& HydroModelsParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HydroModelsParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

HydroModelsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HydroModelsParser::VariablesStmtContext* HydroModelsParser::ProgramContext::variablesStmt() {
  return getRuleContext<HydroModelsParser::VariablesStmtContext>(0);
}

HydroModelsParser::InputStmtContext* HydroModelsParser::ProgramContext::inputStmt() {
  return getRuleContext<HydroModelsParser::InputStmtContext>(0);
}

tree::TerminalNode* HydroModelsParser::ProgramContext::END() {
  return getToken(HydroModelsParser::END, 0);
}

tree::TerminalNode* HydroModelsParser::ProgramContext::EOF() {
  return getToken(HydroModelsParser::EOF, 0);
}

HydroModelsParser::OutputStmtContext* HydroModelsParser::ProgramContext::outputStmt() {
  return getRuleContext<HydroModelsParser::OutputStmtContext>(0);
}

std::vector<HydroModelsParser::ModelStmtContext *> HydroModelsParser::ProgramContext::modelStmt() {
  return getRuleContexts<HydroModelsParser::ModelStmtContext>();
}

HydroModelsParser::ModelStmtContext* HydroModelsParser::ProgramContext::modelStmt(size_t i) {
  return getRuleContext<HydroModelsParser::ModelStmtContext>(i);
}


size_t HydroModelsParser::ProgramContext::getRuleIndex() const {
  return HydroModelsParser::RuleProgram;
}


antlrcpp::Any HydroModelsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::ProgramContext* HydroModelsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, HydroModelsParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(32);
    variablesStmt();
    setState(33);
    inputStmt();
    setState(35);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HydroModelsParser::OUTPUT) {
      setState(34);
      outputStmt();
    }
    setState(38); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(37);
      modelStmt();
      setState(40); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HydroModelsParser::MODEL);
    setState(42);
    match(HydroModelsParser::END);
    setState(43);
    match(HydroModelsParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InputStmtContext ------------------------------------------------------------------

HydroModelsParser::InputStmtContext::InputStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::InputStmtContext::INPUT() {
  return getToken(HydroModelsParser::INPUT, 0);
}

tree::TerminalNode* HydroModelsParser::InputStmtContext::LEFT_BRACE() {
  return getToken(HydroModelsParser::LEFT_BRACE, 0);
}

tree::TerminalNode* HydroModelsParser::InputStmtContext::RIGHT_BRACE() {
  return getToken(HydroModelsParser::RIGHT_BRACE, 0);
}

std::vector<HydroModelsParser::VarDeclContext *> HydroModelsParser::InputStmtContext::varDecl() {
  return getRuleContexts<HydroModelsParser::VarDeclContext>();
}

HydroModelsParser::VarDeclContext* HydroModelsParser::InputStmtContext::varDecl(size_t i) {
  return getRuleContext<HydroModelsParser::VarDeclContext>(i);
}


size_t HydroModelsParser::InputStmtContext::getRuleIndex() const {
  return HydroModelsParser::RuleInputStmt;
}


antlrcpp::Any HydroModelsParser::InputStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitInputStmt(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::InputStmtContext* HydroModelsParser::inputStmt() {
  InputStmtContext *_localctx = _tracker.createInstance<InputStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, HydroModelsParser::RuleInputStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    match(HydroModelsParser::INPUT);
    setState(46);
    match(HydroModelsParser::LEFT_BRACE);
    setState(48); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(47);
      varDecl();
      setState(50); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HydroModelsParser::IDENTIFIER);
    setState(52);
    match(HydroModelsParser::RIGHT_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

HydroModelsParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::VarDeclContext::IDENTIFIER() {
  return getToken(HydroModelsParser::IDENTIFIER, 0);
}

tree::TerminalNode* HydroModelsParser::VarDeclContext::EQUAL() {
  return getToken(HydroModelsParser::EQUAL, 0);
}

HydroModelsParser::ExpressionContext* HydroModelsParser::VarDeclContext::expression() {
  return getRuleContext<HydroModelsParser::ExpressionContext>(0);
}

tree::TerminalNode* HydroModelsParser::VarDeclContext::SEMICOLON() {
  return getToken(HydroModelsParser::SEMICOLON, 0);
}


size_t HydroModelsParser::VarDeclContext::getRuleIndex() const {
  return HydroModelsParser::RuleVarDecl;
}


antlrcpp::Any HydroModelsParser::VarDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitVarDecl(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::VarDeclContext* HydroModelsParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, HydroModelsParser::RuleVarDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    match(HydroModelsParser::IDENTIFIER);
    setState(55);
    match(HydroModelsParser::EQUAL);
    setState(56);
    expression();
    setState(57);
    match(HydroModelsParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariablesStmtContext ------------------------------------------------------------------

HydroModelsParser::VariablesStmtContext::VariablesStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::VariablesStmtContext::VARIABLES() {
  return getToken(HydroModelsParser::VARIABLES, 0);
}

tree::TerminalNode* HydroModelsParser::VariablesStmtContext::LEFT_BRACE() {
  return getToken(HydroModelsParser::LEFT_BRACE, 0);
}

tree::TerminalNode* HydroModelsParser::VariablesStmtContext::RIGHT_BRACE() {
  return getToken(HydroModelsParser::RIGHT_BRACE, 0);
}

std::vector<HydroModelsParser::VarassignmentsContext *> HydroModelsParser::VariablesStmtContext::varassignments() {
  return getRuleContexts<HydroModelsParser::VarassignmentsContext>();
}

HydroModelsParser::VarassignmentsContext* HydroModelsParser::VariablesStmtContext::varassignments(size_t i) {
  return getRuleContext<HydroModelsParser::VarassignmentsContext>(i);
}

std::vector<tree::TerminalNode *> HydroModelsParser::VariablesStmtContext::SEMICOLON() {
  return getTokens(HydroModelsParser::SEMICOLON);
}

tree::TerminalNode* HydroModelsParser::VariablesStmtContext::SEMICOLON(size_t i) {
  return getToken(HydroModelsParser::SEMICOLON, i);
}


size_t HydroModelsParser::VariablesStmtContext::getRuleIndex() const {
  return HydroModelsParser::RuleVariablesStmt;
}


antlrcpp::Any HydroModelsParser::VariablesStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitVariablesStmt(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::VariablesStmtContext* HydroModelsParser::variablesStmt() {
  VariablesStmtContext *_localctx = _tracker.createInstance<VariablesStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, HydroModelsParser::RuleVariablesStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(HydroModelsParser::VARIABLES);
    setState(60);
    match(HydroModelsParser::LEFT_BRACE);
    setState(64); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(61);
      varassignments();
      setState(62);
      match(HydroModelsParser::SEMICOLON);
      setState(66); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == HydroModelsParser::IDENTIFIER);
    setState(68);
    match(HydroModelsParser::RIGHT_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModelStmtContext ------------------------------------------------------------------

HydroModelsParser::ModelStmtContext::ModelStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::ModelStmtContext::MODEL() {
  return getToken(HydroModelsParser::MODEL, 0);
}

tree::TerminalNode* HydroModelsParser::ModelStmtContext::STRING() {
  return getToken(HydroModelsParser::STRING, 0);
}

tree::TerminalNode* HydroModelsParser::ModelStmtContext::LEFT_BRACE() {
  return getToken(HydroModelsParser::LEFT_BRACE, 0);
}

HydroModelsParser::EquationsStmtContext* HydroModelsParser::ModelStmtContext::equationsStmt() {
  return getRuleContext<HydroModelsParser::EquationsStmtContext>(0);
}

tree::TerminalNode* HydroModelsParser::ModelStmtContext::RIGHT_BRACE() {
  return getToken(HydroModelsParser::RIGHT_BRACE, 0);
}

HydroModelsParser::ParametersStmtContext* HydroModelsParser::ModelStmtContext::parametersStmt() {
  return getRuleContext<HydroModelsParser::ParametersStmtContext>(0);
}

HydroModelsParser::OutputStmtContext* HydroModelsParser::ModelStmtContext::outputStmt() {
  return getRuleContext<HydroModelsParser::OutputStmtContext>(0);
}


size_t HydroModelsParser::ModelStmtContext::getRuleIndex() const {
  return HydroModelsParser::RuleModelStmt;
}


antlrcpp::Any HydroModelsParser::ModelStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitModelStmt(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::ModelStmtContext* HydroModelsParser::modelStmt() {
  ModelStmtContext *_localctx = _tracker.createInstance<ModelStmtContext>(_ctx, getState());
  enterRule(_localctx, 8, HydroModelsParser::RuleModelStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(HydroModelsParser::MODEL);
    setState(71);
    match(HydroModelsParser::STRING);
    setState(72);
    match(HydroModelsParser::LEFT_BRACE);
    setState(74);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HydroModelsParser::PARAMETERS) {
      setState(73);
      parametersStmt();
    }
    setState(76);
    equationsStmt();
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HydroModelsParser::OUTPUT) {
      setState(77);
      outputStmt();
    }
    setState(80);
    match(HydroModelsParser::RIGHT_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersStmtContext ------------------------------------------------------------------

HydroModelsParser::ParametersStmtContext::ParametersStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::ParametersStmtContext::PARAMETERS() {
  return getToken(HydroModelsParser::PARAMETERS, 0);
}

tree::TerminalNode* HydroModelsParser::ParametersStmtContext::LEFT_BRACE() {
  return getToken(HydroModelsParser::LEFT_BRACE, 0);
}

tree::TerminalNode* HydroModelsParser::ParametersStmtContext::RIGHT_BRACE() {
  return getToken(HydroModelsParser::RIGHT_BRACE, 0);
}

std::vector<HydroModelsParser::VarDeclContext *> HydroModelsParser::ParametersStmtContext::varDecl() {
  return getRuleContexts<HydroModelsParser::VarDeclContext>();
}

HydroModelsParser::VarDeclContext* HydroModelsParser::ParametersStmtContext::varDecl(size_t i) {
  return getRuleContext<HydroModelsParser::VarDeclContext>(i);
}


size_t HydroModelsParser::ParametersStmtContext::getRuleIndex() const {
  return HydroModelsParser::RuleParametersStmt;
}


antlrcpp::Any HydroModelsParser::ParametersStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitParametersStmt(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::ParametersStmtContext* HydroModelsParser::parametersStmt() {
  ParametersStmtContext *_localctx = _tracker.createInstance<ParametersStmtContext>(_ctx, getState());
  enterRule(_localctx, 10, HydroModelsParser::RuleParametersStmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(HydroModelsParser::PARAMETERS);
    setState(83);
    match(HydroModelsParser::LEFT_BRACE);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HydroModelsParser::IDENTIFIER) {
      setState(84);
      varDecl();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(90);
    match(HydroModelsParser::RIGHT_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarassignmentsContext ------------------------------------------------------------------

HydroModelsParser::VarassignmentsContext::VarassignmentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t HydroModelsParser::VarassignmentsContext::getRuleIndex() const {
  return HydroModelsParser::RuleVarassignments;
}

void HydroModelsParser::VarassignmentsContext::copyFrom(VarassignmentsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- IdWithDefaultContext ------------------------------------------------------------------

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::IDENTIFIER() {
  return getToken(HydroModelsParser::IDENTIFIER, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::LEFT_PAREN() {
  return getToken(HydroModelsParser::LEFT_PAREN, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::DEFAULT() {
  return getToken(HydroModelsParser::DEFAULT, 0);
}

std::vector<tree::TerminalNode *> HydroModelsParser::IdWithDefaultContext::EQUAL() {
  return getTokens(HydroModelsParser::EQUAL);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::EQUAL(size_t i) {
  return getToken(HydroModelsParser::EQUAL, i);
}

std::vector<HydroModelsParser::ExpressionContext *> HydroModelsParser::IdWithDefaultContext::expression() {
  return getRuleContexts<HydroModelsParser::ExpressionContext>();
}

HydroModelsParser::ExpressionContext* HydroModelsParser::IdWithDefaultContext::expression(size_t i) {
  return getRuleContext<HydroModelsParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> HydroModelsParser::IdWithDefaultContext::COMMA() {
  return getTokens(HydroModelsParser::COMMA);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::COMMA(size_t i) {
  return getToken(HydroModelsParser::COMMA, i);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::LOWER() {
  return getToken(HydroModelsParser::LOWER, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::UPPER() {
  return getToken(HydroModelsParser::UPPER, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithDefaultContext::RIGHT_PAREN() {
  return getToken(HydroModelsParser::RIGHT_PAREN, 0);
}

HydroModelsParser::IdWithDefaultContext::IdWithDefaultContext(VarassignmentsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HydroModelsParser::IdWithDefaultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitIdWithDefault(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdWithouDefaultContext ------------------------------------------------------------------

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::IDENTIFIER() {
  return getToken(HydroModelsParser::IDENTIFIER, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::LEFT_PAREN() {
  return getToken(HydroModelsParser::LEFT_PAREN, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::LOWER() {
  return getToken(HydroModelsParser::LOWER, 0);
}

std::vector<tree::TerminalNode *> HydroModelsParser::IdWithouDefaultContext::EQUAL() {
  return getTokens(HydroModelsParser::EQUAL);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::EQUAL(size_t i) {
  return getToken(HydroModelsParser::EQUAL, i);
}

std::vector<HydroModelsParser::ExpressionContext *> HydroModelsParser::IdWithouDefaultContext::expression() {
  return getRuleContexts<HydroModelsParser::ExpressionContext>();
}

HydroModelsParser::ExpressionContext* HydroModelsParser::IdWithouDefaultContext::expression(size_t i) {
  return getRuleContext<HydroModelsParser::ExpressionContext>(i);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::COMMA() {
  return getToken(HydroModelsParser::COMMA, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::UPPER() {
  return getToken(HydroModelsParser::UPPER, 0);
}

tree::TerminalNode* HydroModelsParser::IdWithouDefaultContext::RIGHT_PAREN() {
  return getToken(HydroModelsParser::RIGHT_PAREN, 0);
}

HydroModelsParser::IdWithouDefaultContext::IdWithouDefaultContext(VarassignmentsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HydroModelsParser::IdWithouDefaultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitIdWithouDefault(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IdEqualsExprContext ------------------------------------------------------------------

tree::TerminalNode* HydroModelsParser::IdEqualsExprContext::IDENTIFIER() {
  return getToken(HydroModelsParser::IDENTIFIER, 0);
}

tree::TerminalNode* HydroModelsParser::IdEqualsExprContext::EQUAL() {
  return getToken(HydroModelsParser::EQUAL, 0);
}

HydroModelsParser::ExpressionContext* HydroModelsParser::IdEqualsExprContext::expression() {
  return getRuleContext<HydroModelsParser::ExpressionContext>(0);
}

HydroModelsParser::IdEqualsExprContext::IdEqualsExprContext(VarassignmentsContext *ctx) { copyFrom(ctx); }


antlrcpp::Any HydroModelsParser::IdEqualsExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitIdEqualsExpr(this);
  else
    return visitor->visitChildren(this);
}
HydroModelsParser::VarassignmentsContext* HydroModelsParser::varassignments() {
  VarassignmentsContext *_localctx = _tracker.createInstance<VarassignmentsContext>(_ctx, getState());
  enterRule(_localctx, 12, HydroModelsParser::RuleVarassignments);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarassignmentsContext *>(_tracker.createInstance<HydroModelsParser::IdEqualsExprContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(92);
      match(HydroModelsParser::IDENTIFIER);
      setState(93);
      match(HydroModelsParser::EQUAL);
      setState(94);
      expression();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarassignmentsContext *>(_tracker.createInstance<HydroModelsParser::IdWithDefaultContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(95);
      match(HydroModelsParser::IDENTIFIER);
      setState(96);
      match(HydroModelsParser::LEFT_PAREN);
      setState(97);
      match(HydroModelsParser::DEFAULT);
      setState(98);
      match(HydroModelsParser::EQUAL);
      setState(99);
      expression();
      setState(100);
      match(HydroModelsParser::COMMA);
      setState(101);
      match(HydroModelsParser::LOWER);
      setState(102);
      match(HydroModelsParser::EQUAL);
      setState(103);
      expression();
      setState(104);
      match(HydroModelsParser::COMMA);
      setState(105);
      match(HydroModelsParser::UPPER);
      setState(106);
      match(HydroModelsParser::EQUAL);
      setState(107);
      expression();
      setState(108);
      match(HydroModelsParser::RIGHT_PAREN);
      break;
    }

    case 3: {
      _localctx = dynamic_cast<VarassignmentsContext *>(_tracker.createInstance<HydroModelsParser::IdWithDefaultContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(110);
      match(HydroModelsParser::IDENTIFIER);
      setState(111);
      match(HydroModelsParser::LEFT_PAREN);
      setState(112);
      expression();
      setState(113);
      match(HydroModelsParser::COMMA);
      setState(114);
      expression();
      setState(115);
      match(HydroModelsParser::COMMA);
      setState(116);
      expression();
      setState(117);
      match(HydroModelsParser::RIGHT_PAREN);
      break;
    }

    case 4: {
      _localctx = dynamic_cast<VarassignmentsContext *>(_tracker.createInstance<HydroModelsParser::IdWithouDefaultContext>(_localctx));
      enterOuterAlt(_localctx, 4);
      setState(119);
      match(HydroModelsParser::IDENTIFIER);
      setState(120);
      match(HydroModelsParser::LEFT_PAREN);
      setState(121);
      match(HydroModelsParser::LOWER);
      setState(122);
      match(HydroModelsParser::EQUAL);
      setState(123);
      expression();
      setState(124);
      match(HydroModelsParser::COMMA);
      setState(125);
      match(HydroModelsParser::UPPER);
      setState(126);
      match(HydroModelsParser::EQUAL);
      setState(127);
      expression();
      setState(128);
      match(HydroModelsParser::RIGHT_PAREN);
      break;
    }

    case 5: {
      _localctx = dynamic_cast<VarassignmentsContext *>(_tracker.createInstance<HydroModelsParser::IdWithouDefaultContext>(_localctx));
      enterOuterAlt(_localctx, 5);
      setState(130);
      match(HydroModelsParser::IDENTIFIER);
      setState(131);
      match(HydroModelsParser::LEFT_PAREN);
      setState(132);
      expression();
      setState(133);
      match(HydroModelsParser::COMMA);
      setState(134);
      expression();
      setState(135);
      match(HydroModelsParser::RIGHT_PAREN);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EquationsStmtContext ------------------------------------------------------------------

HydroModelsParser::EquationsStmtContext::EquationsStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HydroModelsParser::EquationsStmtContext::EQUATIONS() {
  return getToken(HydroModelsParser::EQUATIONS, 0);
}

tree::TerminalNode* HydroModelsParser::EquationsStmtContext::LEFT_BRACE() {
  return getToken(HydroModelsParser::LEFT_BRACE, 0);
}

tree::TerminalNode* HydroModelsParser::EquationsStmtContext::RIGHT_BRACE() {
  return getToken(HydroModelsParser::RIGHT_BRACE, 0);
}

std::vector<HydroModelsParser::EquationassignContext *> HydroModelsParser::EquationsStmtContext::equationassign() {
  return getRuleContexts<HydroModelsParser::EquationassignContext>();
}

HydroModelsParser::EquationassignContext* HydroModelsParser::EquationsStmtContext::equationassign(size_t i) {
  return getRuleContext<HydroModelsParser::EquationassignContext>(i);
}

std::vector<tree::TerminalNode *> HydroModelsParser::EquationsStmtContext::SEMICOLON() {
  return getTokens(HydroModelsParser::SEMICOLON);
}

tree::TerminalNode* HydroModelsParser::EquationsStmtContext::SEMICOLON(size_t i) {
  return getToken(HydroModelsParser::SEMICOLON, i);
}


size_t HydroModelsParser::EquationsStmtContext::getRuleIndex() const {
  return HydroModelsParser::RuleEquationsStmt;
}


antlrcpp::Any HydroModelsParser::EquationsStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HydroModelsVisitor*>(visitor))
    return parserVisitor->visitEquationsStmt(this);
  else
    return visitor->visitChildren(this);
}

HydroModelsParser::EquationsStmtContext* HydroModelsParser::equationsStmt() {
  EquationsStmtContext *_localctx = _tracker.createInstance<EquationsStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, HydroModelsParser::RuleEquationsStmt);
  size_t _la = 0;
